# shelly

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: game_manager.cpp  game_manager.h  game_state.cpp  game_state.h  main.cpp  ncursesex.cpp  ncursesex.h  shelly.h
src/player/: player.h
src/screens/: game_screen.cpp  game_screen.h  screen_main.cpp  screen_main.h
